fix: overlap screen in mobile

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3442,6 +3442,7 @@ ul.idt-companyProduct li {
 
 .newcompro {
   background-color: #efefef;
+  overflow: hidden;
 }
 
 .brd-10 {
